# ros2_pick_and_place_yolo

src/panda_moveit_config/config/: panda.urdf.xacro
src/yolov8_obb/: CMakeLists.txt  bolt_selector.py  package.xml  setup.py
src/yolov8_obb_msgs/: CMakeLists.txt  package.xml
