<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolov8_obb_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages for YOLOv8 OBB detections</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- This dependency is needed for message generation -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- This dependency is needed at runtime -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- This tells the system that this package provides messages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>